# rs-uuids2uniq2arrow

./: Cargo.toml  README.md  doc-web.sh
examples/uuids2uniq2arrow/: Cargo.toml  run.sh  uuids2uniq2arrow
examples/uuids2uniq2arrow/src/: main.rs
src/: core.rs  fs.rs  hash2uuid.rs  lib.rs
