[package]
name = "rs-uuids2uniq2arrow"
version = "0.1.0"
edition = "2024"

[dependencies.arrow]
version = "56"
default-features = false
features = [
]

[dependencies.uuid]
version = "1"
default-features = false
features = [
	"std",
]

[dependencies.sha2]
version = "0"
optional = true
default-features = false
features = [
	"std",
]

[features]
default = [
	"fs",
	"hash2uuid",
]

hash2uuid = [
	"sha2",
]

fs = [
]
